--- a/src/bot/chatbotstyles.module.css
+++ b/src/bot/chatbotstyles.module.css
@@ -25,7 +25,7 @@ body {
 /** main styles */
 
 :root {
-  --chatbot-primary-color: #cb177d; 
+  --chatbot-primary-color: #0099D8; 
  --chatbot-secondary-color: #4b5c66;
  --chatbot-light-color: #fff;
  --chatbot-dark-color: #000;
