--- a/src/bot/chatbotstyles.module.css
+++ b/src/bot/chatbotstyles.module.css
@@ -43,9 +43,9 @@ body {
   z-index: 999;
   display: flex;
   flex-direction: column;
-  height: 80%;
-  width: 375px;
-  max-width: 375px;
+  height: 90%;
+  width: 80%;
+  /* max-width: 600px; */
   background: var(--chat-background-color);
   position: fixed;
   bottom: 5px;
