--- a/src/bot/chatbotstyles.module.css
+++ b/src/bot/chatbotstyles.module.css
@@ -43,14 +43,14 @@ body {
   z-index: 999;
   display: flex;
   flex-direction: column;
-  height: 90%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   /* max-width: 600px; */
   background: var(--chat-background-color);
   position: fixed;
-  bottom: 5px;
-  right: 10px;
-  border-radius: 5px;
+  /* bottom: 5px;
+  right: 10px; */
+  /* border-radius: 5px; */
   box-shadow: 0 0 15px 0 black;
   overflow-x: hidden;
   transition: height .2s linear;
